[package]
name = "clock_cache"
version = "0.1.0"
authors = ["Jerome Froelich <jeromefroelic@hotmail.com>"]
description = "A CLOCK cache implementation"
homepage = "https://github.com/jeromefroe/clock_cache"
repository = "https://github.com/jeromefroe/clock_cache.git"
documentation = "https://docs.rs/clock_cache/"
readme = "README.md"
license = "MIT"
keywords = ["CLOCK", "cache"]

[features]
nightly = []

[dependencies]
bit-vec = "0.4.3"